[project]
name = "nonebot-plugin-aidraw"
version = "0.7.0"
description = "NoneBot2 plugin for use AI to draw image"
authors = [
    {name = "Akirami", email = "Akiramiaya@outlook.com"},
]
license = {text = "MIT"}
dependencies = ["nonebot2>=2.0.0rc1", "nonebot-adapter-onebot>=2.1.3", "httpx>=0.23.0", "Pillow<10.0.0,>=9.2.0", "tortoise-orm[aiosqlite]>=0.19.2"]
requires-python = ">=3.8"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/A-kirami/nonebot-plugin-aidraw"
Repository = "https://github.com/A-kirami/nonebot-plugin-aidraw"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
